<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Sign_up"
        android:textColor="@color/purple_700"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="283dp"
        android:layout_height="429dp"
        android:layout_margin="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <EditText
            android:id="@+id/editTextFirstName"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/user_icon"
            android:ems="10"
            android:hint="@string/First_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="16" />

        <EditText
            android:id="@+id/editTextLastName"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/user_icon"
            android:ems="10"
            android:hint="@string/Last_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="16" />

        <EditText
            android:id="@+id/editTextPhone"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:ems="10"
            android:hint="@string/Phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="16" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/password_icon"
            android:ems="10"
            android:hint="@string/Password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="16" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/Sign_up"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:transitionName="button_tran"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_btn" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

