<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@color/white"
    android:layout_height="match_parent">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="112dp"
        android:layout_weight="3"
        android:background="@drawable/background"
        android:columnCount="2"
        android:padding="5dp"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_Medicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="7dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:src="@drawable/img_13" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/Medicine"
                    android:textStyle="bold"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_Make_Up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="7dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:src="@drawable/img_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/Make_Up"
                    android:textStyle="bold"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_SkinCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="7dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:src="@drawable/img_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/SkinCare"
                    android:textStyle="bold"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_Baby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="7dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:src="@drawable/img_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_centerInParent="true"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"
                    android:text="@string/Baby"
                    android:textSize="18sp" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>




